# tmpas

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: config.toml  roms.lua  steam.lua
src/: config.rs  freedesktop.rs  icedui.rs  main.rs  model.rs  plugins.rs  rawpath.rs  smithayui.rs  state.rs  tui.rs  utils.rs
src/freedesktop/: parsing.rs  searching.rs
src/plugins/: builtins.rs  loadable.rs
src/plugins/builtins/: freedesktop.rs
src/plugins/loadable/: dummy.rs  luaplugin.rs
src/plugins/loadable/luaplugin/: api.rs
src/smithayui/: resultslist.rs  searchbar.rs  styling.rs
src/tui/: output.rs  resultslist.rs  searchbar.rs
