[package]
name = "tmpas"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19"
crossterm="0.19"
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}