[package]
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"
name = "tmpas"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.19"
nix = "0.19"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
toml = "0.5"
once_cell = {version = "1.5", optional=true}

futures = {version = "0.3", optional = true}
iced = {version = "0.2", optional = true}
iced_futures = {version = "0.2", optional = true}
iced_native = {version = "0.3", optional = true}

andrew = {version = "0.3", optional = true}
wayland-client = {version = "0.28", optional = true}
smithay-client-toolkit = {version = "0.12", optional = true}

mlua = {version = "0.5.1", features = ["vendored", "luajit", "serialize", "send"], optional=true}

[features]
default = ["smithay-ui", "plugin-lua"]
iced-ui = [
  "iced",
  "iced_futures",
  "iced_native",
  "futures",
]
smithay-ui = [
  "smithay-client-toolkit",
  "andrew",
  "wayland-client",
  "once_cell"
]

plugin-lua = [
  "mlua"
]